--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ deploy:
   region: "eu-west-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "docker-react"
+  bucket_name: "elasticbeanstalk-eu-west-2-754134521271"
+  bucket_path: "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
